--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,7 @@ openai==1.3.0
 python-dotenv==1.0.0
 scikit-learn==1.3.0
 flask==2.3.3
+chromadb==0.4.15
+ollama==0.1.7
+pdfplumber==0.10.3
+docx2txt==0.8
