--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ openai==1.3.0
 python-dotenv==1.0.0
 scikit-learn==1.3.0
 flask==2.3.3
+flask-cors==4.0.0
 chromadb==0.4.15
 ollama==0.1.7
 pdfplumber==0.10.3
