--- a/env.example
+++ b/env.example
@@ -3,6 +3,10 @@ OPENROUTER_API_KEY=your_openrouter_api_key_here
 OPENROUTER_BASE_URL=https://openrouter.ai/api/v1
 OPENROUTER_MODEL=mistralai/mistral-7b-instruct:free
 
+# Supabase Configuration
+SUPABASE_URL=your_supabase_project_url_here
+SUPABASE_ANON_KEY=your_supabase_anon_key_here
+
 # Optional: Ollama Configuration (for local LLM)
 OLLAMA_BASE_URL=http://localhost:11434
 OLLAMA_MODEL=llama2
